syntax="proto3";

import "google/protobuf/timestamp.proto";

package authService;
option go_package = "/authService";

message AuthorizationRequest {
  string login = 1;
  string password = 2;
}

message AuthorizationResponse {
  int64 idAccount = 1;
  int64 role = 2;
  google.protobuf.Timestamp lastActivity = 3;
  google.protobuf.Timestamp dateCreated = 4;
  string accessToken = 5;
  google.protobuf.Timestamp dateExpirationAccessToken = 6;
  string refreshToken = 7;
  google.protobuf.Timestamp dateExpirationRefreshToken = 8;
  bool successfully = 9;
  string message = 10;
  int64 httpStatus = 11;
}

message RegistrationRequest {
  string login = 1;
  string password = 2;
}

message RegistrationResponse {
  int64 idAccount = 1;
  int64 role = 2;
  google.protobuf.Timestamp lastActivity = 3;
  google.protobuf.Timestamp dateCreated = 4;
  string accessToken = 5;
  google.protobuf.Timestamp dateExpirationAccessToken = 6;
  string refreshToken = 7;
  google.protobuf.Timestamp dateExpirationRefreshToken = 8;
  bool successfully = 9;
  string message = 10;
  int64 httpStatus = 11;
}

message LogoutRequest {
  int64 idAccount = 1;
}

message LogoutResponse {
  bool successfully = 1;
  string message = 2;
  int64 httpStatus = 3;
}

message CheckAuthorizationRequest {
  string accessToken = 1;
}

message CheckAuthorizationResponse {
  bool successfully = 1;
  string message = 2;
  int64 httpStatus = 3;
  int64 idAccount = 4;
  int64 roleAccount = 5;
  google.protobuf.Timestamp lastActivityAccount = 6;
  google.protobuf.Timestamp dateCreatedAccount = 7;
}

message UpdateAccessTokenRequest {
  string refreshToken = 1;
}

message UpdateAccessTokenResponse {
  bool successfully = 1;
  string message = 2;
  int64 httpStatus = 3;
  string newAccessToken = 4;
  google.protobuf.Timestamp newDateExpirationAccessToken = 5;
}

message GetUserRequest {
  int64 idAccount = 1;
}

message GetUserResponse {
  int64 role = 1;
  google.protobuf.Timestamp lastActivity = 2;
  google.protobuf.Timestamp dateCreated = 3;
  bool successfully = 4;
  string message = 5;
  int64 httpStatus = 6;
}


service AuthService {
  rpc Authorization (AuthorizationRequest) returns (AuthorizationResponse) {}
  rpc Registration (RegistrationRequest) returns (RegistrationResponse) {}
  rpc Logout (LogoutRequest) returns (LogoutResponse) {}
  rpc CheckAuthorization (CheckAuthorizationRequest) returns (CheckAuthorizationResponse) {}
  rpc UpdateAccessToken (UpdateAccessTokenRequest) returns (UpdateAccessTokenResponse) {}
  rpc GetUser (GetUserRequest) returns (GetUserResponse) {}
}